# masala_public_standard_plugins

./: .gitignore  Doxyfile.src  README.md  TODO_NEXT.txt  buildme.sh  delete_build.sh
cmake/: CMakeLists.txt  compiler.cmake  generate_cmake_build.py
database/unit_test_data/file_interpreters/cost_function_network/: qpacker_problem_description_000017_full.txt  qpacker_problem_description_006480_full.txt
src/: standard_masala_plugins.md
src/benchmark/: link_dependencies.txt
src/benchmark/benchmark_apps/: benchmark_monte_carlo_cfn_optimizer.cc
src/file_interpreters/api/: generate_api_classes.cc  generate_api_classes.hh
src/file_interpreters/cost_function_network/: ASCIICostFunctionNetworkProblemRosettaFileInterpreter.cc  ASCIICostFunctionNetworkProblemRosettaFileInterpreter.fwd.hh  ASCIICostFunctionNetworkProblemRosettaFileInterpreter.hh  BinaryCostFunctionNetworkProblemFileInterpreter.cc  BinaryCostFunctionNetworkProblemFileInterpreter.fwd.hh  BinaryCostFunctionNetworkProblemFileInterpreter.hh  BinaryCostFunctionNetworkProblemRosettaFileInterpreter.cc  BinaryCostFunctionNetworkProblemRosettaFileInterpreter.fwd.hh  BinaryCostFunctionNetworkProblemRosettaFileInterpreter.hh
src/file_interpreters/file_interpreters_apps/: generate_file_interpreters_api.cc
src/optimizers/: link_dependencies.txt
src/optimizers/annealing/: ConstantAnnealingSchedule.cc  ConstantAnnealingSchedule.fwd.hh  ConstantAnnealingSchedule.hh  LinearAnnealingSchedule.cc  LinearAnnealingSchedule.fwd.hh  LinearAnnealingSchedule.hh  LinearRepeatAnnealingSchedule.cc  LinearRepeatAnnealingSchedule.fwd.hh  LinearRepeatAnnealingSchedule.hh  LogarithmicAnnealingSchedule.cc  LogarithmicAnnealingSchedule.fwd.hh  LogarithmicAnnealingSchedule.hh  LogarithmicRepeatAnnealingSchedule.cc  LogarithmicRepeatAnnealingSchedule.fwd.hh  LogarithmicRepeatAnnealingSchedule.hh
src/optimizers/api/: generate_api_classes.cc  generate_api_classes.hh
src/optimizers/cost_function_network/: GreedyCostFunctionNetworkOptimizer.cc  GreedyCostFunctionNetworkOptimizer.fwd.hh  GreedyCostFunctionNetworkOptimizer.hh  MonteCarloCostFunctionNetworkOptimizer.cc  MonteCarloCostFunctionNetworkOptimizer.fwd.hh  MonteCarloCostFunctionNetworkOptimizer.hh  PairwisePrecomputedCFNProblemScratchSpace.cc  PairwisePrecomputedCFNProblemScratchSpace.fwd.hh  PairwisePrecomputedCFNProblemScratchSpace.hh  PairwisePrecomputedCostFunctionNetworkOptimizationProblem.cc  PairwisePrecomputedCostFunctionNetworkOptimizationProblem.fwd.hh  PairwisePrecomputedCostFunctionNetworkOptimizationProblem.hh
src/optimizers/cost_function_network/cost_function/: ChoicePenaltySumBasedCostFunction.cc  ChoicePenaltySumBasedCostFunction.fwd.hh  ChoicePenaltySumBasedCostFunction.hh  FunctionOfIntegerPenaltySumCostFunction.cc  FunctionOfIntegerPenaltySumCostFunction.fwd.hh  FunctionOfIntegerPenaltySumCostFunction.hh  GraphBasedCostFunction.cc  GraphBasedCostFunction.fwd.hh  GraphBasedCostFunction.hh  GraphIslandCountCostFunction.cc  GraphIslandCountCostFunction.fwd.hh  GraphIslandCountCostFunction.hh  LinearGraphIslandCountCostFunction.cc  LinearGraphIslandCountCostFunction.fwd.hh  LinearGraphIslandCountCostFunction.hh  LogOfGraphIslandCountCostFunction.cc  LogOfGraphIslandCountCostFunction.fwd.hh  LogOfGraphIslandCountCostFunction.hh  SquareOfChoicePenaltySumCostFunction.cc  SquareOfChoicePenaltySumCostFunction.fwd.hh  SquareOfChoicePenaltySumCostFunction.hh  SquareOfGraphIslandCountCostFunction.cc  SquareOfGraphIslandCountCostFunction.fwd.hh  SquareOfGraphIslandCountCostFunction.hh  SquareRootOfGraphIslandCountCostFunction.cc  SquareRootOfGraphIslandCountCostFunction.fwd.hh  SquareRootOfGraphIslandCountCostFunction.hh
src/optimizers/gradient_based/: ArmijoInexactLineOptimizer.cc  ArmijoInexactLineOptimizer.fwd.hh  ArmijoInexactLineOptimizer.hh  BFGSFunctionOptimizer.cc  BFGSFunctionOptimizer.fwd.hh  BFGSFunctionOptimizer.hh  BrentAlgorithmLineOptimizer.cc  BrentAlgorithmLineOptimizer.fwd.hh  BrentAlgorithmLineOptimizer.hh  GradientDescentFunctionOptimizer.cc  GradientDescentFunctionOptimizer.fwd.hh  GradientDescentFunctionOptimizer.hh  LBFGSFunctionOptimizer.cc  LBFGSFunctionOptimizer.fwd.hh  LBFGSFunctionOptimizer.hh  util.hh
src/optimizers/gradient_free/: SimplexFunctionOptimizer.cc  SimplexFunctionOptimizer.fwd.hh  SimplexFunctionOptimizer.hh
src/optimizers/optimizers_apps/: generate_optimizers_api.cc
src/optimizers_api/utility/cost_function_network/: util.cc  util.hh
src/registration/: StandardMasalaPluginsRegistrator.cc  StandardMasalaPluginsRegistrator.fwd.hh  StandardMasalaPluginsRegistrator.hh  link_dependencies.txt  register_sub_libraries.cc  register_sub_libraries.hh
src/registration/registration_apps/: generate_registration_api.cc
src/registration_api/: register_library.cc  register_library.hh
src/registration_api/registration_functions/: register_library.cc  register_library.hh
src/scoring/api/: generate_api_classes.cc  generate_api_classes.hh
src/scoring/scoring_apps/: generate_scoring_api.cc
src/scoring/scoring_terms/molecular_system/: ConstantScoringTerm.cc  ConstantScoringTerm.fwd.hh  ConstantScoringTerm.hh
src/selectors/: link_dependencies.txt
src/selectors/api/: generate_api_classes.cc  generate_api_classes.hh
src/selectors/atom_selectors/: ElementTypeAtomSelector.cc  ElementTypeAtomSelector.fwd.hh  ElementTypeAtomSelector.hh  ElementTypeAtomSelectorCreator.cc  ElementTypeAtomSelectorCreator.fwd.hh  ElementTypeAtomSelectorCreator.hh
src/selectors/selectors_apps/: generate_selectors_api.cc
tests/unit/file_interpreters/: file_interpreters_tests.cc  link_dependencies.txt
tests/unit/file_interpreters/cost_function_network/: BinaryCostFunctionNetworkProblemRosettaFileInterpreterTests.cc
tests/unit/optimizers/: link_dependencies.txt  optimizers_tests.cc
tests/unit/optimizers/annealing/: LinearAnnealingScheduleTests.cc  (+3 more)
tests/unit/registration/: link_dependencies.txt  registration_tests.cc
tests/unit/scoring/: link_dependencies.txt  scoring_tests.cc
tests/unit/selectors/: link_dependencies.txt  selectors_tests.cc
(+39 files in other folders)
